--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PERON TIPS- Betting DAILY TIPS</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Same styles as before... */
+  </style>
+</head>
+<body>
+  <h1>PERON TIPS- Daily Tips</h1>
+  <img src="https://i.imgur.com/Rw97AuW.jpeg" alt="Betting Tips Banner">
+  <p>Enter your phone number to access today's betting prediction.</p>
+  <input type="tel" id="phone" placeholder="07XXXXXXXX">
+  <button id="pay">OPEN TIPS NOW</button>
+  <p id="status"></p>
 
+  <h2 style="margin-top: 40px;">Leave a Comment</h2>
+  <form id="commentForm">
+    <textarea id="message" placeholder="Type your comment..." required rows="4"></textarea><br>
+    <button type="submit">Send Comment</button>
+    <p id="commentStatus"></p>
+  </form>
+
+  <footer>
+    <p><a href="disclaimer.html">Disclaimer</a></p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
